--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Be Happy!</title>
-    <div id="video-container">
+
+    <div class="slideshow-container">
+        <div class="mySlides fade">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/aJM-iJ2OxJU" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+          <div class="text">Caption Text</div>
+        </div>
     </div>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
