--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="slideshow-container">
-    <div class="mySlides fade">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/aJM-iJ2OxJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;   
- picture-in-picture" allowfullscreen></iframe>
-      <div class="text">Caption Text</div>
-    </div>   
-    </div>
+
+    <section>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </section>
     
     <header>
         <h1>A gente AMA uma pegadinha</h1>
