--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>A gente AMA uma pegadinha</h1>
     </header>
     <main>
-        <input type="text" id="resultado"> <button onclick="mostrarResultado()">Clique aqui</button>
+        <input type="text" id="resultado"> <button onclick="mostrarResultado()">SUSCRÍBASE AGORA</button>
 
         <script>
             // Aqui vai o JavaScript
