--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </section>
     
     <header>
-        <h1>A gente AMA uma pegadinha</h1>
+        <h1>A gente ama uma pegadinha</h1>
     </header>
     <main>
         <input type="text" id="resultado"> <button onclick="mostrarResultado()">SUSCRÍBASE AGORA</button>
