--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     </section>
     
     <header>
-        <h1>A gente ama uma pegadinha</h1>
+        <h1>Don't Worry, Be happy!</h1>
+        
+        <h3>Em tempos desafiadores, cuidar da saúde mental é essencial, e o riso pode ser um poderoso aliado nesse processo. Nada como uma boa gargalhada para amenizar o peso de um dia difícil. Estudos comprovam que rir é o melhor remédio: além de melhorar o humor, o riso fortalece a saúde física, contribuindo para o bem-estar geral. Rir faz bem para o coração, tonifica a pele do rosto e traz inúmeros benefícios, como reduzir o estresse e aumentar a sensação de felicidade.
+
+Além dos efeitos físicos, o riso tem um impacto profundo na saúde mental, proporcionando leveza e alívio em momentos de tensão. Ele favorece a socialização, promovendo conexões mais saudáveis e ajudando a construir um ambiente de trabalho mais produtivo. Quando as pessoas estão em um ambiente saudável e feliz, elas se sentem mais motivadas, o que reflete diretamente em melhores resultados e na melhoria da qualidade de vida.</h3>
     </header>
     <main>
         <input type="text" id="resultado"> <button onclick="mostrarResultado()">SUSCRÍBASE AGORA</button>
