--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-    <section>
-        <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/aJM-iJ2OxJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-    </section>
+<section>
+<div class="video-container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/aJM-iJ2OxJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+</section>
     
     <header>
         <h1>Don't Worry, Be happy!</h1>
@@ -22,7 +22,7 @@
 Além dos efeitos físicos, o riso tem um impacto profundo na saúde mental, proporcionando leveza e alívio em momentos de tensão. Ele favorece a socialização, promovendo conexões mais saudáveis e ajudando a construir um ambiente de trabalho mais produtivo. Quando as pessoas estão em um ambiente saudável e feliz, elas se sentem mais motivadas, o que reflete diretamente em melhores resultados e na melhoria da qualidade de vida.</h3>
     </header>
     <main>
-        <input type="text" id="resultado"> <button onclick="mostrarResultado()">SUSCRÍBASE AGORA</button>
+        <input type="text" id="resultado"> <button onclick="mostrarResultado()">SAIBA MAIS</button>
 
         <script>
             // Aqui vai o JavaScript
