--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        #video-container {
-          position: relative;
-          width: 100%;
-          height: 300px;
-        }
-      </style>
+<section>
+<div class="video-container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/aJM-iJ2OxJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+</section>
     <title>Be Happy!</title>
     <link rel="stylesheet" href="style.css">
 </head>
