--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 
    <header>
         <h1>A gente AMA uma pegadinha</h1>
+        <h3>Rir pode transformar a sua saúde.</h2>
     </header>
     <main>
-        <input type="text" id="resultado"> <button onclick="mostrarResultado()">Clique aqui</button>
+        <input type="text" id="resultado"> <button onclick="mostrarResultado()">Saiba como!</button>
 
         <script>
             // Aqui vai o JavaScript
