--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 </section>
     <header>
-        <h1>A gente AMA uma pegadinha</h1>
+        <h1>Don't Worry, Be happy!</h1>
         <h3>Rir pode transformar a sua saúde.</h3>
     </header>
     
