--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
         <section class="resultados-pesquisa" id="resultados-pesquisa">
         </section>
 
-
+    <script src="dados.js"></script>
+    <script src="app.js"></script>
 
         
-        <script>
-            // Aqui vai o JavaScript
-        </script>
     </main>
     <footer>
         © 2024 Pegadinhas do Brasil. Todos os Direitos Reservados
