--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </section>
     
     <header>
-        <h1>Don't Worry, Be happy!</h1>
-        <h3>Rir pode transformar a sua saúde.</h3>
+        <h1>Rir pode mudar sua vida!</h1>
     </header>
     
     <main>
