--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </section>
     
     <header>
-        <h1>Rir pode mudar sua vida!</h1>
+        <h1>Rir pode mudar seu dia!</h1>
     </header>
     
     <main>
