--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <body>
         <header>
-        <h1>Rir pode melhorar seu dia!</h1>
+        <h1>Rir pode Melhorar sua Saúde!</h1>
     </header>
   
     <main>
