--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     
 <body>
         <header>
-        <h1>Rir pode Melhorar sua Saúde!</h1>
+        <section>
+            <img src="Netflix-One-Piece-Logo-PNG.png" alt="One Piece" class="logo">
+        </section>
+         <h3>Rir pode Melhorar sua Saúde!</h3>
     </header>
   
     <main>
