--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
         <header>
         <section>
-            <img src="Logo2.png" alt="Be Happy!" class="logo">
+            <img src="Logo.png" alt="Be Happy!" class="logo">
         </section>
          <h3>Rir pode Melhorar sua Saúde!</h3>
     </header>
