--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section></section>
     <section></section>
     <footer>
-        © 2024 Be happy! Todos os Direitos Reservados
+        © Coração Amarelo 2024. Todos os Direitos Reservados
     </footer>
 
     <script src="dados.js"></script>
