--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section>
             <img src="Logo.png" alt="Be Happy!" class="logo">
         </section>
-         <h3>Rir pode Melhorar sua Saúde!</h3>
+         <h3>Rir faz bem para o Coração</h3>
     </header>
   
     <main>
