--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <section>
             <img src="Logo.png" alt="Be Happy!" class="logo">
         </section>
-         <h3>Rir faz bem para o Coração</h3>
+         <h1>Rir faz bem para o Coração</h1>
     </header>
   
     <main>
             
         <section class="botoes">
-        <button id="sorte" onclick="mostrarPersonagemSorte()">Saiba Como</button>
+        <button id="sorte" onclick="mostrarPersonagemSorte()">Clique Aqui e Saiba Como</button>
         </section>
       
         <section class="resultados-pesquisa" id="resultados-pesquisa">
