--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Be Yellow!</title>
+    <title> Coração Amarelo</title>
 </head>
     
 <body>
@@ -13,7 +13,7 @@
         <section>
             <img src="Logo.png" alt="Be Happy!" class="logo">
         </section>
-         <h1>Rir faz bem para o Coração</h1>
+         <h3>Rir faz bem para o Coração</h3>
     </header>
   
     <main>
