--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
             
         <section class="botoes">
-        <button id="sorte" onclick="mostrarPersonagemSorte()">Clique Aqui e Saiba Como</button>
+        <button id="sorte" onclick="mostrarPersonagemSorte()">Clique aqui ou saiba mais</button>
         </section>
       
         <section class="resultados-pesquisa" id="resultados-pesquisa">
